# LLM-Council

./: .gitignore  EXCEL_COMPARATOR_README.md  OAUTH_SETUP.md  PERFORMANCE_OPTIMIZATION.md  README.md  SERVICE_ACCOUNT_SETUP.md  council.py  debug_gemini.py  debug_ollama.py  main.py  oauth_config.json.template  performance_config.ini  pyproject.toml  run_app.ps1  temp_oauth.json  walkthrough.txt
